--- a/example/index.html
+++ b/example/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Example</title>
     <link rel="stylesheet" href="./styles/main.css" />
-    <script src="./js/main.js"></script>
   </head>
   <body>
     <div class="center">
-      <canvas id="canvas"></canvas>
+      <canvas width="1000" height="600" id="canvas"></canvas>
     </div>
+    <script src="./js/main.js"></script>
   </body>
 </html>
